# component-registry

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.frontend  Justfile  README.md  action.yml  cli.html  design-system.html  docker-compose.yml  docs.html  grpc.html  http.html  index.html  landing.html  schema.sql
.config/impeccable/: .impeccable.md
.config/tracey/: config.styx
.github/: CONTRIBUTING.md  copilot-instructions.md  copilot-setup-steps.yml
.github/scripts/: registry-entry.mjs  upsert-comment.sh
.github/workflows/: ci.yaml  coverage.yaml  publish.yml  registry-entry.yml  release-bump.yml  release-fork.yml  (+2 more)
crates/component-cli/tests/fixtures/sources/library-kitchen-sink/: Cargo.toml
crates/component-cli/tests/fixtures/sources/library-kitchen-sink/src/: lib.rs
crates/component-cli/tests/fixtures/sources/library-kitchen-sink/wit/: world.wit
crates/component-cli/tests/fixtures/sources/library-resources/: Cargo.toml
crates/component-cli/tests/fixtures/sources/library-resources/src/: lib.rs
crates/component-cli/tests/fixtures/sources/library-resources/wit/: world.wit
crates/component-cli/tests/fixtures/sources/library-wordmark/: Cargo.toml
crates/component-cli/tests/fixtures/sources/library-wordmark/src/: lib.rs
crates/component-cli/tests/fixtures/sources/library-wordmark/wit/: world.wit
docs/: architecture.md  authentication.md  configuration.md  github-action.md  usage.md
registry/: ba.toml  microsoft.toml  wasi.toml  wasmcloud.toml
scripts/: install.ps1  install.sh
spec/: frontend.md  wasm-cli.md  wasm-meta-registry.md
(+403 files in other folders)
