[package]
name = "library-wordmark"
version = "0.0.0"
edition = "2024"
publish = false

# Excluded from the parent workspace (see root Cargo.toml).
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[package.metadata.component]
package = "test:wordmark"

[package.metadata.component.target]
path = "wit"
world = "wordmark"

[profile.release]
opt-level = "s"
lto = true
strip = true
